# llm-gym

./: .env.example  .gitignore  .gitleaks.toml  .security-scan-allowlist  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
auto-company-magatama/: DRYRUN-PLAN.md  GTM-GUARDRAILS.md  GUARDRAILS.md  Makefile.sandbox  README.md  auto-company.allow  auto-company.deny  codex-sandbox-profile.toml  setup-copy.sh
auto-company-magatama/agents/: roster.md
auto-company-magatama/codex-agents/: comply-builder.toml  frontend-builder.toml  investor-relations.toml  marketing-drafter.toml  ml-builder.toml  release-manager.toml  sales-drafter.toml
auto-company-magatama/outputs/: 1.0-punch-list.md  release-gap-analysis-round2.md  release-gap-analysis.md  resolver-breakdown.md
docs/: FAQ.md  FLEET_ACCESS.md  PHONE_TERMINAL.md  USAGE.md
docs/security/: agentforger-review.md
examples/: adapter-confluence.json  adapter-jira-itsm.json  adapter-jira.json  adapter-security-triage.json  adapter-spec.md  adapter-support-assistant.json
llm_gym/: __init__.py  __main__.py  academic.py  adapters.py  advisor.py  analysis.py  anonymize.py  app.py  catalog.py  catalog_gen.py  catalog_sync.py  champion.py  collector.py  config.py  cooldown.py  crypto.py  csrf.py  deploy.py  distill.py  feedback.py  gold.py  judge.py  offload.py  ollama_client.py  pipeline.py  pool.py  queue.py  remote_queue.py  scoring.py  security.py  sources.py  system_check.py  terminal.py  vault.py
scripts/: catalog_sync_run.sh  cf_phone_tunnel.sh  smoke.py
tests/: test_terminal_pwa.py
(+18 files in other folders)
